# pybind_demo

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/pybind_demo/: pybind_demo.hpp
scripts/: ackermann.py  ackermann_numba.py  ackermann_pybind.py  csvreader.py  csvreader_pybind.py  split.py  split_mut_pybind.py  split_naive_pybind.py  split_pybind.py  test_split.txt
src/: ack_pybind.py  bindings.cpp  pybind_demo.cpp
